--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </div>
 
                 <div class="home_img">
-                    <img src="images/Joel.PNG" >
+                    <img src="images/Joel.png" >
                 </div>
             </section>
 
