--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
                 <div class="work_container bd-grid">
                   <a href="Joel_P6/albums.html">
                     <div class="work_img">
-                        <img src="images/music.PNG" alt="">
+                        <img src="images/music.png" alt="">
                         <p class="description">Music Player</p>
                     </div>
                   </a>
                     <div class="work_img">
-                        <img src="images/market.PNG" alt="">
+                        <img src="images/market.png" alt="">
                         <p class="description">College MarketPlace</p>
                     </div>
                 </div>
